change html to improve SEO

--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logoHaeder.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizza Joints</title>
+    <meta
+      name="description"
+      content="Delicious pizza joints by PIZZA Joints. Explore our menu and find the nearest location."
+    />
+    <link rel="icon" type="image/svg+xml" href="/pizzajoints.png" />
+
+    <meta property="og:title" content="Pizza Joints - PIZZA JOINTS" />
+    <meta
+      property="og:description"
+      content="Delicious pizza joints by PIZZA Joints. Explore our menu and find the nearest location."
+    />
+    <meta property="og:image" content="/pizzajoints.png" />
+    <meta property="og:url" content="https://pizza-joints.vercel.app/" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Pizza Joints - PIZZA Joints" />
+    <meta
+      name="twitter:description"
+      content="Delicious pizza joints by PIZZA Joints. Explore our menu and find the nearest location."
+    />
+    <meta name="twitter:image" content="/pizzajoints.png" />
+
+    <link rel="canonical" href="https://pizza-joints.vercel.app/" />
   </head>
   <body>
     <div id="app"></div>
